# vscode-efinix-riscv-kit

./: CHANGELOG.md  LICENSE.md  README.md  package.json  tsconfig.json
resources/project_template_standalone/: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  CMakeUserPresets.json.example  Makefile  README.md  efinix-template.json
resources/project_template_standalone/cmake/: clangd-support.cmake  debug-targets.cmake  risc-efinix.cmake  riscv-efinix.cmake
resources/project_template_standalone/ld/: dram.ld  sram.ld
resources/project_template_standalone/src/: main.cpp
src/: extension.ts  multiStepInput.ts  templates.ts  utils.ts
